--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 
   <div class="user-type">
     <a href="index1.html"><button>I am Job Seeker</button></a>
-    <button onclick="goToEmployer()">I am Employer</button>
+    <a href="index2.html"><button>I am Employer</button>
   </div>
 </section>
 <!-- Using Cards with Fade-in Effect -->
