--- a/dashboard.html
+++ b/dashboard.html
@@ -6,59 +6,38 @@
   <title>Candidate Dashboard</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <style>
-    /* Custom CSS */
-    body, html {
-      height: 100%;
-      margin: 0;
-    }
-    .container {
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start; /* Align to the top */
-      padding: 50px 0; /* Add padding to the top */
-    }
-    .dashboard-header {
-      text-align: center;
-      margin-bottom: 50px;
-    }
-    .card {
-      margin-bottom: 20px;
-    }
-  </style>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
   <div class="container">
-    <div>
+    <div class="dashboard-container">
       <div class="dashboard-header">
         <h1>Candidate Dashboard</h1>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Job Offer</h5>
-              <p class="card-text">Congratulations! You've received a job offer</p>
-            </div>
+      <div class="dashboard-content">
+        <a href="applied_jobs.html" class="card applied-jobs">
+          <div class="card-body">
+            <h5 class="card-title">Applied Jobs</h5>
+            <p class="card-text">You have applied to 3 jobs</p>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Applied Jobs</h5>
-              <p class="card-text">You have applied to 3 jobs</p>
-            </div>
+        </a>
+        <a href="saved_jobs.html" class="card saved-jobs">
+          <div class="card-body">
+            <h5 class="card-title">Saved Jobs</h5>
+            <p class="card-text">You have 2 saved jobs</p>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Saved Jobs</h5>
-              <p class="card-text">You have 2 saved jobs</p>
-            </div>
+        </a>
+        <a href="job_offer.html" class="card job-offer">
+          <div class="card-body">
+            <h5 class="card-title">Job Offer</h5>
+            <p class="card-text">Congratulations! You've received a job offer</p>
           </div>
-        </div>
+        </a>
+      </div>
+      <div class="text-center profile-builder">
+        <!-- Anchor tag linking to educationdetails.html -->
+        <a href="educationdetails.html" class="btn btn-primary">Profile Builder</a>
       </div>
     </div>
   </div>
