--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        <form action="login_process.php" method="post">
+        <form action="dashboard.html" method="get">  <!--write get method to view html page-->
             <div class="form-group">
                 <label for="email">Email:</label><br>
                 <input type="email" id="email" name="email" required>
@@ -21,9 +21,11 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Login">
+                <input type="submit" value="Login" <a href="register.html">Signup</a>>
+               
             </div>
         </form>
+        <p>Forgot your password? <a href="forgot_password.html">Reset Password</a></p>
         <p>Don't have an account? <a href="register.html">Signup</a></p>
     </div>
 </body>
