--- a/register.html
+++ b/register.html
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="form-group input-name">
-                    <button type="submit" class="btn btn-primary btn-block">Register</button>
+                    <a href="dashboard.html" class="btn btn-primary btn-block">Register</a>
                 </div>
             </form>
         </div>
