--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Job Portal</title>
 <link rel="stylesheet" href="home.css">
 </head>
-<body>
+<body  class="background">
 
 <header>
   <nav>
@@ -22,10 +22,10 @@
   <h1>Welcome to Job Portal</h1>
   <p>Search Online Jobs!!!</p>
   <form action="">
+
    <div class="autocomplete-wrapper">
         <input type="text" id="jobTitleInput" placeholder="Enter Job Title">
-       
-       
+      </div>
   
      <!---- <ul class="autocomplete-list">
         <li>
@@ -39,7 +39,7 @@
         </li>
        </ul>-->
    
-  </div>
+ 
   <button type="submit" class="btn-submit">Search</button>
  </form>
   <div class="user-type">
